Add endpoint to validate reset password code
