# src/docs/swagger.yaml
@@ -262,6 +262,60 @@ paths:
                 status: 500
                 error: Ocurrió un error inesperado.
                 data: {}
+  /auth/validate-reset-password-code:
+    post:
+      summary: Validar código de recuperación de contraseña
+      description: Endpoint que permite validar el código de recuperación de contraseña.
+      tags: [Autenticación]
+      requestBody:
+        description: Datos del usuario a validar el código de recuperación de contraseña.
+        required: true
+        content:
+          application/json:
+            example:
+              email: enzo@gmail.com
+              code: 123456
+      responses:
+        '200':
+          description: Código de recuperación de contraseña válido.
+          content:
+            application/json:
+              example:
+                ok: true
+                status: 200
+                error: null
+                data: "El código es válido."
+        '400':
+          description: El cuerpo de la petición no es válido.
+          content:
+            application/json:
+              example:
+                ok: false
+                status: 400
+                error:
+                  - field: email
+                    message: El email es obligatorio.
+                  - field: code
+                    message: El código es obligatorio.
+                data: {}
+        '404':
+          description: El código de recuperación no existe.
+          content:
+            application/json:
+              example:
+                ok: false
+                status: 404
+                error: El código de recuperación no existe.
+                data: {}
+        '500':
+          description: Error interno del servidor.
+          content:
+            application/json:
+              example:
+                ok: false
+                status: 500
+                error: Ocurrió un error inesperado.
+                data: {}
   /auth/reset-password:
     post:
       summary: Restablecer contraseña
